tests/baselines/reference/functionCall6.errors.txt
==== tests/cases/compiler/functionCall6.ts (6 errors) ====
    function foo(a:string){}; 
    foo('bar');
    foo(2);
    ~~~
!!! functionCall6.ts(3,1): error TS2082: Supplied parameters do not match any signature of call target:
!!! 	Could not apply type 'string' to argument 1 which is of type 'number'.
    ~~~
!!! functionCall6.ts(3,1): error TS2087: Could not select overload for 'call' expression.
    foo('foo', 'bar');
    ~~~
!!! functionCall6.ts(4,1): error TS2081: Supplied parameters do not match any signature of call target.
    ~~~
!!! functionCall6.ts(4,1): error TS2087: Could not select overload for 'call' expression.
    foo();
    ~~~
!!! functionCall6.ts(5,1): error TS2081: Supplied parameters do not match any signature of call target.
    ~~~
!!! functionCall6.ts(5,1): error TS2087: Could not select overload for 'call' expression.
    